--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=user-api
-
 spring.data.mongodb.uri=${MONGOURL}
 spring.data.mongodb.database=java-user-api
+spring.security.user.password=${SPRINGPASSWORD}
