validate signup form

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.data.mongodb.uri=${MONGOURL}
 spring.data.mongodb.database=java-user-api
 spring.security.user.password=${SPRINGPASSWORD}
 jwtsecret=${JWTSECRET}
+server.error.include-message=always
