--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.data.mongodb.database=java-user-api
 spring.security.user.password=${SPRINGPASSWORD}
 jwtsecret=${JWTSECRET}
 server.error.include-message=always
+spring.data.mongodb.auto-index-creation=true
